fix font size being too small, changed some paddings and margins

--- a/client/src/components/charts-container.styles.scss
+++ b/client/src/components/charts-container.styles.scss
@@ -21,6 +21,7 @@
 
   @include respond(tab-land) {
     flex-direction: column;
+    margin-bottom: 0;
   }
 }
 
