--- a/client/src/components/favorite-project-chart.styles.scss
+++ b/client/src/components/favorite-project-chart.styles.scss
@@ -5,7 +5,6 @@
   flex: 0 0 44rem;
   display: inline-flex;
   flex-direction: column;
-  border: 1px solid $color-gray-light;
   box-shadow: $box-shadow-primary;
   margin-right: 2rem;
   margin-bottom: 2rem;
@@ -13,8 +12,7 @@
 
   @include respond(phone) {
     flex: 1 1 100%;
-    margin-right: 0;
-    margin-bottom: 2rem;
+    margin-right: 1rem;
   }
 
   .favorite-icon,
