--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -14,10 +14,6 @@ html {
   @include respond(tab-land) {
     font-size: 56.25%;
   }
-
-  @include respond(tab-port) {
-    font-size: 50%;
-  }
 }
 
 body {
